--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    lintOptions {
+        //abortOnError true
+        //ignoreWarnings true
+    }
 }
 
 dependencies {
